Fix metrics for preface to align with menu

--- a/src/components/common/preface/preface.css
+++ b/src/components/common/preface/preface.css
@@ -2,7 +2,7 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  padding: map(spaces, medium) map(spaces, large) map(spaces, large);
+  padding: map(spaces, medium) map(spaces, large) calc(map(spaces, large) / 2);
   background-color: $color-year;
   background-color: var(--color-year, $color-year);
   background-image: inline('diamond.svg');
